[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Buttons/TagsCloseButton.png" type="Texture" id=1]
[ext_resource path="res://scripts/TagsControl.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.113725, 0.176471, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="TagsControl" type="Control"]
margin_left = 102.0
margin_right = 272.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblTags" type="Label" parent="."]
margin_left = 4.0
margin_top = 9.0
margin_right = 32.0
margin_bottom = 23.0
text = "Tags"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelTextBg" type="Panel" parent="."]
margin_left = 36.0
margin_top = 4.0
margin_right = 166.0
margin_bottom = 28.0
rect_min_size = Vector2( 130, 24 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TxtTags" type="LineEdit" parent="PanelTextBg"]
margin_left = 12.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
custom_styles/normal = SubResource( 2 )
placeholder_text = "2bit, mono"
placeholder_alpha = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanTagsButton" type="TextureButton" parent="PanelTextBg"]
visible = false
margin_left = 110.0
margin_top = 3.0
margin_right = 128.0
margin_bottom = 21.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTween" type="Tween" parent="."]

[connection signal="text_changed" from="PanelTextBg/TxtTags" to="." method="_on_TxtTags_text_changed"]
[connection signal="pressed" from="PanelTextBg/CleanTagsButton" to="." method="_on_CleanTagsButton_pressed"]
